<resources>
    <string name="app_name">MoviesApp</string>
    <string name="movie_item_name">Movie Name</string>
    <string name="movie_item_description">this is description for this a great movie</string>
    <string name="movie_item_author">movie author</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="movie_name">Movie Name</string>
    <string name="original_lang">Original Language</string>
    <string name="article_share_btn_description">share this article</string>
    <string name="posterContentDescription">Movie Poster Image</string>

    <string name="Popular_Movies"> popular</string>
    <string name="Top_Rated_Movies">top_rated</string>
    <string name="Airing_Today_Movies">airing_today</string>
    <string name="On_The_Air_Movies">on_the_air</string>
    <string name="Favourite_Movies">Favourite</string>
    <string name="on_air_date">On Air Date</string>
    <string name="overview">overview</string>
    <string name="trailer">Trailers</string>
    <string name="fab_content_description">"Set / remove a movie as favourite "</string>
    <string name="vote_avarage">Vote Avarage</string>
    <string name="vote_count">Vote Count</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="remove_from_favourite">Remove From Favourite</string>
</resources>