<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/posterImgView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/posterContentDescription"
        android:scaleType="fitXY"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_below="@id/posterImgView"
            android:layout_above="@id/favFab"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--first air date-->
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <TextView
                           android:id="@+id/voteCount"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="@dimen/movie_title_padding"
                           android:layout_alignParentStart="true"
                           android:text="@string/vote_count"
                           android:textAlignment="viewStart"
                           android:textColor="@color/black"
                           android:textSize="14sp"
                           android:textStyle="bold"/>

                       <TextView
                           android:id="@+id/voteCountTV"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="@dimen/movie_title_padding"
                           android:textSize="14sp"
                           android:layout_alignParentEnd="true"
                           android:textStyle="bold"/>

                       <TextView
                           android:id="@+id/voteAvarage"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="@dimen/movie_title_padding"
                           android:layout_alignParentStart="true"
                           android:layout_below="@id/voteCount"
                           android:text="@string/vote_avarage"
                           android:textAlignment="viewStart"
                           android:textColor="@color/black"
                           android:textSize="14sp"
                           android:textStyle="bold"/>

                       <TextView
                           android:id="@+id/voteAvarageTV"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="@dimen/movie_title_padding"
                           android:textSize="14sp"
                           android:layout_alignParentEnd="true"
                           android:layout_below="@id/voteCountTV"
                           android:textStyle="bold"/>

                       <TextView
                        android:id="@+id/firstAir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/movie_title_padding"
                        android:layout_below="@+id/voteAvarage"
                        android:text="@string/on_air_date"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/firstAirDateTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/movie_title_padding"
                        android:textSize="14sp"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/voteAvarageTV"
                        android:textStyle="bold"/>
                   </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <!-- //overview-->
                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/movie_title_padding"
                        android:text="@string/overview"
                        android:textAlignment="center"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/overviewTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/movie_title_padding"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_toEndOf="@+id/overview"/>

                        <TextView
                            android:id="@+id/trailers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/trailer"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_alignParentStart="true"
                            android:layout_below="@id/overviewTV"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/trailersRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_toEndOf="@id/trailers"
                            android:layout_below="@id/overviewTV"
                            android:padding="10dp"
                            android:visibility="gone"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/trailers"
                            android:layout_below="@id/overviewTV"
                            android:padding="10dp"
                            android:translationZ="90dp"
                            android:visibility="visible" />
                    </RelativeLayout>

                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/favFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/add_to_favourite"
            android:src="@drawable/baseline_favorite_white_24"
            app:backgroundTint="@color/colorAccent"
            app:borderWidth="0dp"
            app:fabSize="normal"
            android:contentDescription="@string/fab_content_description" />

</RelativeLayout>
